# uconfig-python

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
bindings/: module.cpp
pyuconfig/: __init__.py
