[build-system]
requires = [
    "scikit-build-core>=0.6",
    "pybind11>=2.11"
]
build-backend = "scikit_build_core.build"

[project]
name = "uconfig-python"
version = "0.0.1"
description = "Python bindings for the uConfig C++ library"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Lama Al Rajih"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.scikit-build]
cmake.minimum-version = "3.18"
wheel.packages = ["pyuconfig"]
